--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mapbox-gl": "^3.11.0",
     "next": "^14.2.16",
     "next-intl": "^3.25.3",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.6.0",
     "react-confirm": "^0.3.0-7",
     "react-day-picker": "^8.10.1",
