--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "apexcharts": "^4.1.0",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
