--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-stacked-carousel": "^1.1.4",
     "react-stacked-center-carousel": "^1.0.14",
     "react-toastify": "^10.0.5",
+    "react-webcam": "^7.2.0",
     "recharts": "^2.15.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
